<package format="2">
  <name>EORB_SLAM3</name>
  <version>0.1.0</version>
  <description>Event-based ORB-SLAM3 for ROS</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Add all ROS dependencies -->
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>tf</depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>

